--- a/package.json
+++ b/package.json
@@ -1,251 +1,14 @@
 {
-  "private": true,
-  "name": "monorepo",
-  "license": "MIT",
-  "homepage": "https://mdxjs.com",
-  "repository": "mdx-js/mdx",
-  "bugs": "https://github.com/mdx-js/mdx/issues",
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/unified"
-  },
-  "type": "module",
-  "workspaces": [
-    "packages/remark-mdx",
-    "packages/mdx",
-    "packages/react",
-    "packages/preact",
-    "packages/vue",
-    "packages/esbuild",
-    "packages/loader",
-    "packages/node-loader",
-    "packages/register",
-    "packages/rollup"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@codemirror/lang-markdown": "^6.0.0",
-    "@codemirror/state": "^6.0.0",
-    "@codemirror/theme-one-dark": "^6.0.0",
-    "@codemirror/view": "^6.0.0",
-    "@node-loader/babel": "^1.0.0",
-    "@node-loader/core": "^1.0.0",
-    "ahooks": "^3.0.0",
-    "ap-style-title-case": "^2.0.0",
-    "autoprefixer": "^10.0.0",
-    "babel-loader": "^9.0.0",
-    "c8": "^7.0.0",
-    "capture-website": "^3.0.0",
-    "chrome-aws-lambda": "^10.1.0",
-    "codemirror": "^6.0.0",
-    "cross-env": "^7.0.0",
-    "cssnano": "^5.0.0",
-    "dlv": "^1.0.0",
-    "esbuild": "^0.17.0",
-    "eslint-config-xo-react": "^0.27.0",
-    "eslint-plugin-es": "^4.0.0",
-    "eslint-plugin-react": "^7.0.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "eslint-plugin-security": "^1.0.0",
-    "estree-util-value-to-estree": "^2.0.0",
-    "globby": "^13.0.0",
-    "hast-to-hyperscript": "^10.0.0",
-    "hast-util-select": "^5.0.0",
-    "hast-util-to-text": "^3.0.0",
-    "hastscript": "^7.0.0",
-    "highlight.js": "^11.0.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.0",
-    "lowlight": "^2.0.0",
-    "p-all": "^4.0.0",
-    "patch-package": "^6.0.0",
-    "periscopic": "^3.0.0",
-    "postcss": "^8.0.0",
-    "postcss-cli": "^10.0.0",
-    "prettier": "^2.0.0",
-    "puppeteer-core": "^19.0.0",
-    "react": "0.0.0-experimental-1159ff619-20220324",
-    "react-dom": "0.0.0-experimental-1159ff619-20220324",
-    "react-error-boundary": "^3.0.0",
-    "react-fetch": "0.0.0-experimental-1159ff619-20220324",
-    "react-server-dom-webpack": "0.0.0-experimental-1159ff619-20220324",
-    "react-tabs": "^6.0.0",
-    "react-use-clipboard": "^1.0.0",
-    "rehype-autolink-headings": "^6.0.0",
-    "rehype-document": "^6.0.0",
-    "rehype-highlight": "^6.0.0",
-    "rehype-infer-description-meta": "^1.0.0",
-    "rehype-infer-reading-time-meta": "^1.0.0",
-    "rehype-infer-title-meta": "^1.0.0",
-    "rehype-meta": "^3.0.0",
-    "rehype-minify-url": "^4.0.0",
-    "rehype-parse": "^8.0.0",
-    "rehype-preset-minify": "^6.0.0",
-    "rehype-raw": "^6.0.0",
-    "rehype-remove-comments": "^5.0.0",
-    "rehype-sanitize": "^5.0.0",
-    "rehype-shift-heading": "^1.0.0",
-    "rehype-slug": "^5.0.0",
-    "rehype-stringify": "^9.0.0",
-    "remark-cli": "^11.0.0",
-    "remark-directive": "^2.0.0",
-    "remark-frontmatter": "^4.0.0",
-    "remark-gemoji": "^7.0.0",
-    "remark-gfm": "^3.0.0",
-    "remark-github": "^11.0.0",
-    "remark-mdx-frontmatter": "^2.0.0",
-    "remark-preset-wooorm": "^9.0.0",
-    "remark-squeeze-paragraphs": "^5.0.0",
-    "remark-strip-badges": "^6.0.0",
-    "remark-toc": "^8.0.0",
-    "rodemirror": "^2.0.0",
-    "type-coverage": "^2.0.0",
-    "typescript": "^5.0.0",
-    "unified": "^10.0.0",
-    "unist-builder": "^3.0.0",
-    "unist-util-visit": "^4.0.0",
-    "estree-util-visit": "^1.2.1",
-    "unist-util-remove-position": "^4.0.2",
-    "uvu": "^0.5.0",
-    "vfile": "^5.0.0",
-    "vfile-message": "^3.0.0",
-    "vfile-reporter": "^7.0.0",
-    "vfile-statistics": "^2.0.0",
-    "webpack": "^5.0.0",
-    "xast-util-feed": "^1.0.0",
-    "xast-util-sitemap": "^1.0.0",
-    "xast-util-to-xml": "^3.0.0",
-    "xo": "^0.53.0"
+  "name": "@pareto-engineering/mdx",
+  "version": "4.0.0-alpha.36",
+  "description": "<p align=\"center\">   <a href=\"https://mdxjs.com\">     <img alt=\"MDX\" src=\"https://mdx-logo.now.sh\" width=\"60\" />   </a> </p>",
+  "main": "dist/mdx.js",
+  "directories": {
+    "doc": "docs"
   },
   "scripts": {
-    "postinstall": "patch-package",
-    "prepare": "husky install",
-    "docs-prep": "node --unhandled-rejections=strict website/prep.js && postcss docs/_asset/index.css -o public/index.css",
-    "docs-bundle-dev": "cross-env NODE_ENV=development node --unhandled-rejections=strict website/bundle.js",
-    "docs-bundle-prod": "cross-env NODE_ENV=production node --unhandled-rejections=strict website/bundle.js",
-    "docs-generate": "cross-env NODE_LOADER_CONFIG=website/loader-react-server.js node --unhandled-rejections=strict --no-warnings --experimental-loader @node-loader/core --conditions=react-server website/generate.server.js",
-    "docs-prerender": "cross-env NODE_LOADER_CONFIG=website/loader.js node --unhandled-rejections=strict --no-warnings --experimental-loader @node-loader/core website/prerender.js",
-    "docs-post": "node --unhandled-rejections=strict website/post.js",
-    "docs-dev": "npm run docs-prep && npm run docs-bundle-dev && npm run docs-generate && npm run docs-prerender && npm run docs-post",
-    "docs-prod": "npm run docs-prep && npm run docs-bundle-prod && npm run docs-generate && npm run docs-prerender && npm run docs-post",
-    "docs": "npm run docs-prod",
-    "docs-deploy": "vercel && vercel alias $(pbpaste) mdxjs.com && vercel alias $(pbpaste) www.mdxjs.com",
-    "format": "remark . -qfo && remark . -e mdx -u mdx -qfo && prettier . -w --loglevel warn && xo --fix",
-    "lint": "remark . -qf && remark . -e mdx -u mdx -qf && prettier . -c --loglevel warn && xo",
-    "build": "npm run build --workspaces --if-present",
-    "test-api": "npm run test-api --workspaces --if-present",
-    "test-coverage": "npm run test-coverage --workspaces --if-present",
-    "test": "npm run build && npm run format && npm run test-coverage"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "xo --fix"
-    ],
-    "*.{css,html,json,js,jsx,ts,tsx,yml}": [
-      "prettier --write"
-    ],
-    "*.md": [
-      "remark -qfo --"
-    ],
-    "*.mdx": [
-      "remark -u mdx -qfo --"
-    ]
-  },
-  "browserslist": [
-    "last 2 versions",
-    "not dead"
-  ],
-  "prettier": {
-    "singleQuote": true,
-    "bracketSpacing": false,
-    "semi": false,
-    "trailingComma": "none"
-  },
-  "xo": {
-    "envs": [
-      "shared-node-browser"
-    ],
-    "extensions": [
-      "jsx",
-      "cjs"
-    ],
-    "prettier": true,
-    "rules": {
-      "import/extensions": "off",
-      "n/file-extension-in-import": "off",
-      "react/prop-types": "off",
-      "unicorn/no-await-expression-member": "off",
-      "unicorn/prefer-code-point": "off",
-      "unicorn/prefer-logical-operator-over-ternary": "off",
-      "unicorn/prefer-node-protocol": "off",
-      "unicorn/prefer-top-level-await": "off",
-      "capitalized-comments": "off",
-      "complexity": "off",
-      "max-depth": "off"
-    },
-    "overrides": [
-      {
-        "files": [
-          "docs/_asset/index.client.js"
-        ],
-        "envs": [
-          "browser"
-        ]
-      },
-      {
-        "files": [
-          "docs/**/*.js",
-          "packages/{mdx,react,preact}/test/**/*.{js,jsx}",
-          "website/**/*.js"
-        ],
-        "extends": "xo-react"
-      },
-      {
-        "files": [
-          "packages/*/lib/**/*.js",
-          "packages/remark-mdx/index.js"
-        ],
-        "extends": [
-          "plugin:es/restrict-to-es2019",
-          "plugin:security/recommended"
-        ],
-        "rules": {
-          "security/detect-object-injection": "off"
-        }
-      },
-      {
-        "files": [
-          "**/*.d.ts"
-        ],
-        "rules": {
-          "@typescript-eslint/consistent-indexed-object-style": [
-            "error",
-            "index-signature"
-          ]
-        }
-      }
-    ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": true,
-      "cssnano": {
-        "preset": "default"
-      }
-    }
-  },
-  "remarkConfig": {
-    "plugins": [
-      "preset-wooorm",
-      [
-        "lint-no-html",
-        false
-      ],
-      [
-        "lint-file-extension",
-        false
-      ]
-    ]
-  }
+  "author": "",
+  "license": "ISC"
 }
